client/src/App.css
/* ... */
.no-display-desktop {
  display:none;
}

.top-right {
  position: absolute;
  top: 8px;
  right: 16px;
}

.top-center {
  position: absolute;
  top: 5%;
  left: 30%;
}

.mealoption-center {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  font-size: 100px;
  text-shadow: 2px 2px 4px #ffefb0;
  line-height: 35px;
  color: white;
}

.meal-plan-container {
  position: relative;
  text-align: center;
}

.selectmeal-center {
  font-size: 30px;
  text-shadow: 2px 2px 4px #ffefb0;
  line-height: 30px;
  color: white;
  vertical-align: middle;
}

.bottom-right {
  position: absolute;
  bottom: 8px;
  right: 16px;
}

.bottom-right-meal-selection {
  position: absolute;
  bottom: 30px;
  right: 0.1px;
  left: 0.1px;
  float: right;
}
.top-right-meal-selection {
  position: absolute;
  top: 0.1px;
  right: 0.1px;
  left: 0.1px;
  float: right;
}

.centered {
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
}

.override-form-control {
  color: #181818;
}

.required-red {
  color: red;
}

/* button */

.top-btn1 {
  padding: 0.2rem 0.5rem;
  text-transform: uppercase;
  letter-spacing: 0;
  border: 0;
  line-height: 1.5;
  border-radius: 4px;
  font-weight: bold;
}

.top-btn1-primary {
  background-color: var(--green);
  opacity: 1;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
  color: white;
}
.top-btn1-primary:hover {
  background-color: var(--orange);
  color: white;
  text-decoration: none;
}

.btn1 {
  padding: 0.1rem 2rem;
  text-transform: uppercase;
  letter-spacing: 0;
  border: 0;
  line-height: 2;
  border-radius: 4px;
}

.btn1-primary {
  background-color: var(--orange);
  opacity: 1;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
  color: white;
}

.btn1-primary:hover {
  background-color: var(--green);
  color: white;
  text-decoration: none;
}

.subscribe-btn {
  background-color: var(--green);
  color: white !important;
  padding: 6px 0.5rem;
  text-transform: uppercase;
  letter-spacing: 0;
  border: 0;
  line-height: 2.5;
  border-radius: 4px;
  -webkit-transition: 0.2s;
  -moz-transition: 0.2s;
  -o-transition: 0.2s;
  transition: 0.2s;
}

.subscribe-btn:hover {
  background-color: #325a2f;
  color: white;
  text-decoration: none;
}

hr.one {
  border: none;
  height: 20px;
  width: 90%;
  height: 50px;
  margin-top: 0;
  border-bottom: 0 solid #1f1209;
  box-shadow: 0 20px 20px -20px #333;
  margin: -50px auto 10px;
}
hr.one-half {
  border: none;
  width: 90%;
  height: 50px;
  margin-top: 0;
  margin-bottom: 0;
  border-top: 0 solid #1f1209;
  box-shadow: 0 -20px 20px -20px #333;
  margin-left: 50px;
}

.background {
  background-image: url(./img/img3.jpg);
  background-size: 100% 100%;
}

/* select meal page */
hr.two {
  width: 30%;
  background-color: black;
}

hr.three {
  width: 470px;
  margin: 10px auto;
  border: none;
}

hr.four {
  width: 40%;
  background-color: #dbdbdbc0;
}

.header {
  height: 600px;
  width: 100vw;
  background: black;
  overflow: hidden;
}

.black {
  object-fit: cover;
  opacity: 50% !important;
  height: 187px;
  width: 100%;
}

.overlay {
  background: black;
}

.blackM {
  object-fit: cover;
  opacity: 0.5 !important;
  height: 187px;
  width: 100%;
}
.checked {
  color: rgb(255, 196, 0);
}

.btn2 {
  -webkit-box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0) !important;
  box-shadow: 0 0.1875rem 0.1875rem 0 rgba(0, 0, 0, 0) !important;
  padding: 0.1rem 2rem;
  font-size: 70%;
  text-transform: uppercase;
  letter-spacing: 0.15rem;
  border: 0;
  border-radius: 4px;
}

.btn2-primary {
  /* background-color: #427c42; */
  background-color: var(--green);
  opacity: 1;
}

.btn2-primary:hover {
  background-color: var(--orange);
}

.btn2-primary:focus {
  background-color: var(--orange);
  color: white;
}

.btn2-primary:active {
  background-color: var(--orange) !important;
}

.meals-button {
  font-size: 150%;
}

.h6 {
  font-size: 10em;
}
.container-select-meal {
  position: relative;
  text-align: center;
  color: white;
}

.scrollMenu {
  overflow: auto;
  height: 550px;
}

.number-of-meals {
  color: black;
}
.number-of-meals-margin {
  margin: 10px;
}

.feedback_marginTop {
  margin-top: 40px;
}

/* subscription page */
.borderr {
  border-style: solid !important;
  border-width: thick !important;
}

.rcorners {
  border-radius: 100px 100px 0 0;
  margin-bottom: 3px;
  height: 7%;
  color: white;
  font-size: 20px;
  text-shadow: rgba(0, 0, 0, 0.4) 0px 4px 5px;
}

.rcorner_color {
  background-color: #427c42;
}

.border_card_subcribe {
  padding: 0px !important;
  /* border: 1px solid #b4b4b4; */
  box-shadow: 10px 0px 32px 4px rgba(0, 0, 0, 0.3);
}

.card_color {
  color: green;
}

.bottom_header {
  margin: 30px 0 20px 0;
}
.bottom_header p {
  font-size: 20px;
}

.start_button {
  margin-top: 15px;
  color: white;
  padding: 0.5rem 2.5rem;
  font-size: 1.25rem;
  border-radius: 0.3rem;
}
.container_space {
  margin-top: 100px;
}
.paymentCard {
  max-width: 20rem;
  margin: 20px;
  border: 1px solid rgb(68, 68, 68);
  border-radius: 0px;
}
.background_black {
  background-color: #181818 !important;
  border-radius: 0 !important;
}
.loading {
  width: 100px;
  height: 100px;
  opacity: 1;
  background-color: white;
  display: flex;
  justify-content: center;
  padding: 35px;
  z-index: 3;
  position: absolute;
  bottom: 300px;
}

.socialBranchLogo {
  width: 41px;
  height: 41px;
  margin-bottom: 0px;
  margin-right: 8px;
  display: inline-block;
  padding-top: 10px;
}
.sub_title {
  font-weight: 500;
  font-size: 25px;
}

.select_center {
  width: 100%;
  display: inline-block;
  text-align-last: center;
  font-weight: bold;
}

.half-opacity {
  opacity: 0.5;
}
.w-20 {
  width: 20% !important;
}

